namespace AFS_Visa_Processing_System.Models
{
    public class User
    {
        public int UserID { get; set; }
        public string Role { get; set; } = "Applicant";
    }
}