namespace AFS_Visa_Processing_System.Models
{
    public class Visa
    {
        public int VisaID { get; set; }
        public VisaType VisaType { get; set; }
    }
}