namespace AFS_Visa_Processing_System.Models
{
    public enum VisaType
    {
        Work,
        Business,
        Study,
        Visitor,
        Family
    }
}