namespace AFS_Visa_Processing_System.Services
{
    public interface IVisaApplicationBusiness
    {
        bool SaveToCache();
    }
}