using System;
using System.Collections.Generic;
using System.Linq;
using System.Threading.Tasks;

namespace AFS_Visa_Processing_System.Services
{
    public class VisaApplicationBusiness : IVisaApplicationBusiness
    {
        public bool SaveToCache()
        {
            return false;
        }
    }
}